--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,19 @@
+/* regole di base */
 *{
     margin: 0
 }
+
+/* top box  */
 .pattern{
-    background-color: rgb(0, 179, 255);
-    max-width: 1080px;
-    height: 50px;
+    background-color: rgb(0, 128, 255);
+    max-width: 900px;
+    height: 70px;
+    margin: 0 auto;
     background-image:url(../img/pattern.png) ;
     background-size: contain;
+}
+.titolo{
+    height: 100%;
+    width: 20%;
+    
 }
